@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.96 2010/01/15 14:28:09 mb Exp $
+# $Id: CHANGES,v 1.993.2.97 2010/01/18 19:46:03 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.7 (2010/??/??)
+ - (2010/01/18) Fixed bug#4770 - Attachments are stripped/not shown from
+    outgoing emails in some scenarios with ms exchange.
  - (2010/01/15) Fixed bug#4735 - TicketFreeTime search in Customer frontend
     does not work as expected
  - (2010/01/15) Fixed bug#4758 - Dashboard RSS feeds doesn't display XML
